pt-br/articles/gjournal-desktop: Sync with en f96f635
Obtained from: https://translate-dev.freebsd.org

--- a/documentation/content/pt-br/articles/gjournal-desktop/_index.adoc
+++ b/documentation/content/pt-br/articles/gjournal-desktop/_index.adoc
@@ -321,7 +321,7 @@ A seção a seguir aborda as perguntas mais frequentes relacionadas a problemas 
 
 === Estou recebendo um kernel panic durante períodos de alta atividade de disco. Como isso está relacionado ao journaling?
 
-O journal provavelmente fica cheio antes de ter a chance de ser confirmado (gravado) no disco. Lembre-se de que o tamanho do journal depende da carga de uso e não do tamanho do provedor de dados. Se a atividade do disco for intensa, será necessário uma partição maior para o journal. Consulte a nota na seção <<understanding-journaling,Compreendendo o Journaling>> para mais informações.
+O journal provavelmente fica cheio antes de ter a chance de ser confirmado (gravado) no disco. Lembre-se de que o tamanho do journal depende da carga de uso e não do tamanho do provedor de dados. Se a atividade do disco for intensa, será necessário uma partição maior para o journal. Consulte a nota na seção crossref:gjournal-desktop[understanding-journaling, Compreendendo o Journaling] para mais informações.
 
 === Eu cometi algum erro durante a configuração e não consigo inicializar normalmente agora. Isso pode ser resolvido de alguma forma?
 
