--- a/documentation/content/pt-br/articles/gjournal-desktop/_index.po
+++ b/documentation/content/pt-br/articles/gjournal-desktop/_index.po
@@ -3,13 +3,13 @@
 # This file is distributed under the same license as the FreeBSD Documentation package.
 # Danilo G. Baio <dbaio@FreeBSD.org>, 2021.
 # Edson Brandi <ebrandi@freebsd.org>, 2023.
-# "Danilo G. Baio" <dbaio@FreeBSD.org>, 2023.
+# "Danilo G. Baio" <dbaio@FreeBSD.org>, 2023, 2024.
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2022-02-01 10:28-0300\n"
-"PO-Revision-Date: 2023-05-15 19:36+0000\n"
-"Last-Translator: Edson Brandi <ebrandi@freebsd.org>\n"
+"POT-Creation-Date: 2024-12-29 08:30-0500\n"
+"PO-Revision-Date: 2024-12-29 21:42+0000\n"
+"Last-Translator: \"Danilo G. Baio\" <dbaio@FreeBSD.org>\n"
 "Language-Team: Portuguese (Brazil) <https://translate-dev.freebsd.org/"
 "projects/documentation/articlesgjournal-desktop_index/pt_BR/>\n"
 "Language: pt_BR\n"
@@ -227,9 +227,9 @@ msgstr ""
 "Essa funcionalidade é fornecida carregando o módulo [.filename]#geom_journal."
 "ko# no kernel (ou compilando-o em um kernel personalizado) e usando o "
 "comando `gjournal` para configurar os sistemas de arquivos. Em geral, você "
-"gostaria de registrar grandes sistemas de arquivos, como o [.filename]#/usr#"
-". No entanto, você precisará reservar algum espaço livre em disco (consulte "
-"a próxima seção)."
+"gostaria de registrar grandes sistemas de arquivos, como o [.filename]#/"
+"usr#. No entanto, você precisará reservar algum espaço livre em disco "
+"(consulte a próxima seção)."
 
 #. type: Plain text
 #: documentation/content/en/articles/gjournal-desktop/_index.adoc:104
@@ -415,12 +415,12 @@ msgid ""
 "var#).  From the pop-up that appears, opt to create a file system, and type "
 "[.filename]#/usr# as the mount point."
 msgstr ""
-"Agora, mova o destaque para o nome do disco no topo da tela e pressione "
-"kbd:[C] para criar uma nova partição para [.filename]#/usr#. Essa nova "
-"partição deve ser menor em 1 GB (se você pretende jornalizar apenas [."
-"filename]#/usr#) ou 2 GB (se você pretende jornalizar tanto [.filename]#/usr#"
-" quanto [.filename]#/var#). No pop-up que aparece, opte por criar um sistema "
-"de arquivos e digite [.filename]#/usr# como ponto de montagem."
+"Agora, mova o destaque para o nome do disco no topo da tela e pressione kbd:"
+"[C] para criar uma nova partição para [.filename]#/usr#. Essa nova partição "
+"deve ser menor em 1 GB (se você pretende jornalizar apenas [.filename]#/"
+"usr#) ou 2 GB (se você pretende jornalizar tanto [.filename]#/usr# quanto [."
+"filename]#/var#). No pop-up que aparece, opte por criar um sistema de "
+"arquivos e digite [.filename]#/usr# como ponto de montagem."
 
 #. type: delimited block = 4
 #: documentation/content/en/articles/gjournal-desktop/_index.adoc:152
@@ -498,9 +498,9 @@ msgstr ""
 "disco seja destacado. Em seguida, pressione kbd:[N], insira o tamanho "
 "desejado (_1024M_) e selecione \"swap space\" no menu pop-up que aparece. "
 "Repita esse processo para cada journal que você deseja criar. No nosso "
-"exemplo, criaremos duas partições para fornecer os journals de [."
-"filename]#/usr# e [.filename]#/var#. O resultado final é mostrado na captura "
-"de tela a seguir:"
+"exemplo, criaremos duas partições para fornecer os journals de [.filename]#/"
+"usr# e [.filename]#/var#. O resultado final é mostrado na captura de tela a "
+"seguir:"
 
 #. type: Target for macro image
 #: documentation/content/en/articles/gjournal-desktop/_index.adoc:172
@@ -644,8 +644,8 @@ msgid ""
 "and type:"
 msgstr ""
 "Depois de preparar todas as partições necessárias, é bastante fácil "
-"configurar o journaling. Será necessário mudar para o modo de usuário único ("
-"single user mode). Para isso, faça o login como `root` e digite o seguinte "
+"configurar o journaling. Será necessário mudar para o modo de usuário único "
+"(single user mode). Para isso, faça o login como `root` e digite o seguinte "
 "comando:"
 
 #. type: delimited block . 4
@@ -663,8 +663,8 @@ msgid ""
 "filename]#/var#:"
 msgstr ""
 "Pressione kbd:[Enter] para obter o shell padrão. Agora, você precisará "
-"desmontar as partições que serão jornalizadas, no nosso exemplo [."
-"filename]#/usr# e [.filename]#/var#:"
+"desmontar as partições que serão jornalizadas, no nosso exemplo [.filename]#/"
+"usr# e [.filename]#/var#:"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/gjournal-desktop/_index.adoc:226
@@ -758,11 +758,11 @@ msgid ""
 "var# and [.filename]#/usr# partitions we have to mount.  Before mounting, we "
 "must however set the journal flag on them and clear the Soft Updates flag:"
 msgstr ""
-"Neste ponto, dois novos dispositivos são criados, chamados [.filename]#ad0s1d"
-".journal# e [.filename]#ad0s1f.journal#. Eles representam as partições [."
-"filename]#/var# e [.filename]#/usr# que devemos montar. No entanto, antes de "
-"montá-los, precisamos definir a flag de journaling neles e desativar a flag "
-"de Soft Updates:"
+"Neste ponto, dois novos dispositivos são criados, chamados [."
+"filename]#ad0s1d.journal# e [.filename]#ad0s1f.journal#. Eles representam as "
+"partições [.filename]#/var# e [.filename]#/usr# que devemos montar. No "
+"entanto, antes de montá-los, precisamos definir a flag de journaling neles e "
+"desativar a flag de Soft Updates:"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/gjournal-desktop/_index.adoc:272
@@ -794,8 +794,8 @@ msgid ""
 "Now, mount the new devices manually at their respective places (note that we "
 "can now use the `async` mount option):"
 msgstr ""
-"Agora, monte manualmente os novos dispositivos em seus respectivos locais ("
-"observe que agora podemos usar a opção de montagem `async`):"
+"Agora, monte manualmente os novos dispositivos em seus respectivos locais "
+"(observe que agora podemos usar a opção de montagem `async`):"
 
 #. type: delimited block . 4
 #: documentation/content/en/articles/gjournal-desktop/_index.adoc:284
@@ -1053,14 +1053,15 @@ msgid ""
 "(flushed) to disk.  Keep in mind the size of the journal depends on the "
 "usage load, and not the size of the data provider.  If your disk activity is "
 "high, you need a larger partition for the journal.  See the note in the "
-"<<understanding-journaling>> section."
+"crossref:gjournal-desktop[understanding-journaling, Understanding Journaling "
+"in FreeBSD] section."
 msgstr ""
 "O journal provavelmente fica cheio antes de ter a chance de ser confirmado "
 "(gravado) no disco. Lembre-se de que o tamanho do journal depende da carga "
 "de uso e não do tamanho do provedor de dados. Se a atividade do disco for "
 "intensa, será necessário uma partição maior para o journal. Consulte a nota "
-"na seção <<understanding-journaling,Compreendendo o Journaling>> para mais "
-"informações."
+"na seção crossref:gjournal-desktop[understanding-journaling, Compreendendo o "
+"Journaling] para mais informações."
 
 #. type: Title ===
 #: documentation/content/en/articles/gjournal-desktop/_index.adoc:390
@@ -1320,9 +1321,9 @@ msgid ""
 "https://lists.freebsd.org/pipermail/freebsd-current/2006-June/064043."
 "html[This post] in {freebsd-current} by man:gjournal[8]'s developer, `{pjd}`."
 msgstr ""
-"https://lists.freebsd.org/pipermail/freebsd-current/2006-June/064043.html["
-"Esta mensagem] na {freebsd-current} enviada por um desenvolvedor do "
-"man:gjournal[8]'s, `{pjd}`."
+"https://lists.freebsd.org/pipermail/freebsd-current/2006-June/064043."
+"html[Esta mensagem] na {freebsd-current} enviada por um desenvolvedor do man:"
+"gjournal[8]'s, `{pjd}`."
 
 #. type: Plain text
 #: documentation/content/en/articles/gjournal-desktop/_index.adoc:510
@@ -1330,8 +1331,8 @@ msgid ""
 "https://lists.freebsd.org/pipermail/freebsd-questions/2008-April/173501."
 "html[This post] in {freebsd-questions} by `{ivoras}`."
 msgstr ""
-"https://lists.freebsd.org/pipermail/freebsd-questions/2008-April/173501.html["
-"Esta mensagem] na {freebsd-questions} enviada por `{ivoras}`."
+"https://lists.freebsd.org/pipermail/freebsd-questions/2008-April/173501."
+"html[Esta mensagem] na {freebsd-questions} enviada por `{ivoras}`."
 
 #. type: Plain text
 #: documentation/content/en/articles/gjournal-desktop/_index.adoc:510
