pt-br/articles/freebsd-update-server: Sync with en f96f635
Obtained from: https://translate-dev.freebsd.org

--- a/documentation/content/pt-br/articles/freebsd-update-server/_index.adoc
+++ b/documentation/content/pt-br/articles/freebsd-update-server/_index.adoc
@@ -41,6 +41,12 @@ ifndef::env-beastie[]
 include::../../../../../shared/asciidoctor.adoc[]
 endif::[]
 
+
+[WARNING]
+====
+As instruções neste artigo se referem a uma versão mais antiga do FreeBSD e podem não funcionar corretamente em versões recentes do SO. Com a disponibilidade do pkgbase, o utilitário freebsd-update está programado para ser removido do FreeBSD no futuro. Quando isso acontecer, este artigo será atualizado para refletir os novos procedimentos ou removido completamente.
+====
+
 [.abstract-title]
 Resumo
 
