porters-handbook/testing: Add missing jail argument
The testport subcommand was missing the jail argument.

Reviewed by:	dbaio
Pull Request:	https://github.com/freebsd/freebsd-doc/pull/407

--- a/documentation/content/en/books/porters-handbook/testing/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/testing/_index.adoc
@@ -505,7 +505,7 @@ Adding the `-c`:
 
 [source,shell]
 ....
-# poudriere testport -c -o www/firefox
+# poudriere testport -j 131Ramd64 -c -o www/firefox
 ....
 
 Presents the port configuration dialog before the port is built.
