Handbook - Russian: Remove install chapter and fix chapters order
- Remove install chapter
- Fix chapters order

Sponsored by:	Siracusa consulting

--- a/documentation/content/ru/books/handbook/book.adoc
+++ b/documentation/content/ru/books/handbook/book.adoc
@@ -2,8 +2,8 @@
 title: Руководство FreeBSD
 authors:
   - author: Проект Документации FreeBSD
-copyright: 1995-2020 The FreeBSD Documentation Project
-trademarks: ["freebsd", "ibm", "ieee", "redhat", "3com", "adobe", "apple", "intel", "linux", "microsoft", "opengroup", "sun", "realnetworks", "oracle", "3ware", "arm", "adaptec", "heidelberger", "intuit", "lsilogic", "themathworks", "thomson", "vmware", "wolframresearch", "xiph", "xfree86", "general"] 
+copyright: 1995-2025 The FreeBSD Documentation Project
+trademarks: ["freebsd", "ibm", "ieee", "redhat", "3com", "adobe", "apple", "intel", "linux", "microsoft", "opengroup", "sun", "realnetworks", "oracle", "3ware", "arm", "adaptec", "google", "heidelberger", "intuit", "lsilogic", "themathworks", "thomson", "vmware", "wolframresearch", "xiph", "xfree86", "general"]
 ---
 
 = Руководство FreeBSD
@@ -42,11 +42,7 @@ ifndef::env-beastie[]
 include::../../../../../shared/asciidoctor.adoc[]
 endif::[]
 
-[.abstract-title]
-[abstract]
-Аннотация
-
-Добро пожаловать в FreeBSD! Это Руководство охватывает процесс установки и ежедневного использования _FreeBSD {rel112-current}-RELEASE_ и _FreeBSD {rel120-current}-RELEASE_. Оно находится _в процессе разработки_ и являет собой результат работы множества людей. Многие из разделов до сих пор не существуют, а некоторые из существующих требуют обновления. Если вы заинтересованы в помощи этому проекту, отправьте письмо в {freebsd-doc}. Обновленная версия этого документа постоянно доступна с http://www.FreeBSD.org/ru/index.html[Основного Web сервера FreeBSD]. Он также может быть загружен из интернет в одном из наиболее распространенных форматов с link:ftp://ftp.FreeBSD.org/pub/FreeBSD/doc/[FTP сервера Проекта FreeBSD] или с одного из многочисленных <<mirrors-ftp,зеркал>>. Если вы предпочитаете иметь напечатанный (английский) вариант Руководства, то можете приобрести его на http://www.freebsdmall.com/[FreeBSD Mall]. Вы также можете воспользоваться link:https://www.FreeBSD.org/ru/search/[Поиском в Руководстве FreeBSD].
+include::{chapters-path}introduction.adoc[]
 
 '''
 
@@ -62,8 +58,6 @@ include::{chapters-path}preface/_index.adoc[leveloffset=+1]
 include::{chapters-path}parti.adoc[]
 
 include::{chapters-path}introduction/_index.adoc[leveloffset=+1]
-
-include::{chapters-path}install/_index.adoc[leveloffset=+1]
 
 include::{chapters-path}bsdinstall/_index.adoc[leveloffset=+1]
 
