--- a/documentation/content/ru/books/handbook/bsdinstall/_index.adoc
+++ b/documentation/content/ru/books/handbook/bsdinstall/_index.adoc
@@ -1,7 +1,7 @@
 ---
 title: Глава 3. Установка FreeBSD версий 9.X и более поздних
 part: Часть I. В начале
-prev: books/handbook/install
+prev: books/handbook/introduction
 next: books/handbook/basics
 showBookMenu: true
 weight: 5
