--- a/documentation/content/ru/books/handbook/introduction/_index.adoc
+++ b/documentation/content/ru/books/handbook/introduction/_index.adoc
@@ -2,7 +2,7 @@
 title: Глава 1. Введение
 part: Часть I. В начале
 prev: books/handbook/parti
-next: books/handbook/install
+next: books/handbook/bsdinstall
 showBookMenu: true
 weight: 3
 path: "/books/handbook/introduction/"
