--- a/documentation/content/ru/books/handbook/_index.adoc
+++ b/documentation/content/ru/books/handbook/_index.adoc
@@ -2,12 +2,16 @@
 title: Руководство FreeBSD
 authors:
   - author: Проект Документации FreeBSD
-copyright: 1995-2020 The FreeBSD Documentation Project
-trademarks: ["freebsd", "ibm", "ieee", "redhat", "3com", "adobe", "apple", "intel", "linux", "microsoft", "opengroup", "sun", "realnetworks", "oracle", "3ware", "arm", "adaptec", "heidelberger", "intuit", "lsilogic", "themathworks", "thomson", "vmware", "wolframresearch", "xiph", "xfree86", "general"] 
+copyright: 1995-2025 The FreeBSD Documentation Project
+description: A constantly evolving, comprehensive resource for FreeBSD users
+trademarks: ["freebsd", "ibm", "ieee", "redhat", "3com", "adobe", "apple", "intel", "linux", "microsoft", "opengroup", "sun", "realnetworks", "oracle", "3ware", "arm", "adaptec", "google", "heidelberger", "intuit", "lsilogic", "themathworks", "thomson", "vmware", "wolframresearch", "xiph", "xfree86", "general"] 
+tags: ["FreeBSD Handbook", "Handbook"]
 next: books/handbook/preface
+add_single_page_link: true
 showBookMenu: true
 weight: 0
 path: "/books/handbook/"
+bookOrder: 1
 ---
 
 = FreeBSD Handbook
@@ -31,19 +35,19 @@ include::shared/attributes/attributes-{{% lang %}}.adoc[]
 include::shared/{{% lang %}}/teams.adoc[]
 include::shared/{{% lang %}}/mailing-lists.adoc[]
 include::shared/{{% lang %}}/urls.adoc[]
+:chapters-path: content/{{% lang %}}/books/handbook/
 endif::[]
 ifdef::backend-pdf,backend-epub3[]
+:chapters-path:
 include::../../../../../shared/asciidoctor.adoc[]
 endif::[]
 endif::[]
 
 ifndef::env-beastie[]
+:chapters-path:
 include::../../../../../shared/asciidoctor.adoc[]
 endif::[]
 
-[.abstract-title]
-Аннотация
-
-Добро пожаловать в FreeBSD! Это Руководство охватывает процесс установки и ежедневного использования _FreeBSD {rel112-current}-RELEASE_ и _FreeBSD {rel120-current}-RELEASE_. Оно находится _в процессе разработки_ и являет собой результат работы множества людей. Многие из разделов до сих пор не существуют, а некоторые из существующих требуют обновления. Если вы заинтересованы в помощи этому проекту, отправьте письмо в {freebsd-doc}. Обновленная версия этого документа постоянно доступна с http://www.FreeBSD.org/ru/index.html[Основного Web сервера FreeBSD]. Он также может быть загружен из интернет в одном из наиболее распространенных форматов с link:ftp://ftp.FreeBSD.org/pub/FreeBSD/doc/[FTP сервера Проекта FreeBSD] или с одного из многочисленных <<mirrors-ftp,зеркал>>. Если вы предпочитаете иметь напечатанный (английский) вариант Руководства, то можете приобрести его на http://www.freebsdmall.com/[FreeBSD Mall]. Вы также можете воспользоваться link:https://www.FreeBSD.org/ru/search/[Поиском в Руководстве FreeBSD].
+include::{chapters-path}introduction.adoc[]
 
 '''
