Document __FreeBSD_version 1500030

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -210,6 +210,11 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |December 6, 2024
 |15.0-CURRENT after adding `bus_attach_children`, `bus_detach_children`, and `bus_identify_children`.
 
+|1500030
+|gitref:b196276c20b577b364372f1aa1a646b9ce34bf5c[repository="src",length=12]
+|January 2, 2025
+|15.0-CURRENT after changing `bus_generic_detach` to delete child devices after detaching them.
+
 |===
 
 [[versions-14]]
