Status/2024Q: grammar fixes

--- a/website/content/en/status/report-2024-10-2024-12/bugmeister.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/bugmeister.adoc
@@ -49,7 +49,7 @@ Bugmeister folks also did some passes through the database to clean up metadata:
 
  * removed many of the 'patch' keywords from PRs.
    In the optimal case these should now be imputed by metadata in each attachment.
-   In a few cases where patches are submitted inline insteada of as an attachment, the keyword stays.
+   In a few cases where patches are submitted inline instead of as an attachment, the keyword stays.
    There may be a few of these left over from the GNATS conversion.
    The use of inline patches should be discouraged, as automation has no way to detect them.
    Thanks to our triagers, especially Alexander Ziaee.
@@ -58,7 +58,7 @@ There were various discussions about bug futures that came up in various video c
 One is that there is a (supported) successor to Phabricator, which itself is now no longer developed.
 Multiple groups will need to coordinate to evaluate it.
 
-Jan Bramkamp has volunteered to help with the task "automate harvesting PRs and evalauting whether they still apply".
+Jan Bramkamp has volunteered to help with the task "automate harvesting PRs and evaluating whether they still apply".
 Mark Linimon to collaborate.
 
 Clusteradm@ helped us fend off yet another crawler site.
