--- a/website/content/en/status/report-2024-10-2024-12/gcc.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/gcc.adoc
@@ -14,7 +14,7 @@ As usual, thanks to everyone involved.
 
 If you maintain any of the affected ports or want to give a hand preparing and testing some patches, you can consider trying adding `-fpermissive` to `CFLAGS` in affected ports as a temporary solution: GCC 14 has transformed some warnings into errors, which is the cause of many of the failed builds.
 The `-fpermissive` flag switches those errors back to warnings.
-However, it is preferable that upstream updates its code to remove those warnings completely so that `-fpermissive` is not necessary, possibily with FreeBSD ports maintainers support.
+However, it is preferable that upstream updates its code to remove those warnings completely so that `-fpermissive` is not necessary, possibly with FreeBSD ports maintainers support.
 If the code is not maintained upstream anymore, the time might have come to deprecate the port.
 
 Work has been done on some bugs too, mainly upstream:
