[phb]: Document Uses=cl

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -282,6 +282,66 @@ Prevents the port from installing [.filename]#charset.alias#.
 This must be installed only by package:converters/libiconv[].
 `CHARSETFIX_MAKEFILEIN` can be set to a path relative to `WRKSRC` if [.filename]#charset.alias# is not installed by [.filename]#${WRKSRC}/Makefile.in#.
 
+[[uses-cl]]
+== `cl`
+
+Possible arguments: (none)
+
+Provides support for Common Lisp ports.
+
+The framework provides the following variables that can be set by ports:
+
+`ASDF_MODULES`::
+List of `ASDF` modules to build when `FASL_TARGET` is set (defaults to `PORTNAME`)
+
+`FASL_TARGET`::
+Build fasl variant of port (one of `ccl`, `clisp`, or `sbcl`)
+
+`USE_ASDF`::
+Depend on package:devel/cl-asdf[]
+
+`USE_ASDF_FASL`::
+Depend on `devel/cl-asdf-<FASL_TARGET>`
+
+`USE_CCL`::
+Depend on package:lang/ccl[]; implied when `FASL_TARGET=ccl`
+
+`USE_CLISP`::
+Depend on package:lang/clisp[]; implied when `FASL_TARGET=clisp`
+
+`USE_SBCL`::
+Depend on package:lang/sbcl[]; implied when `FASL_TARGET=SBCL`
+
+
+The framework provides the following variables that can be read by ports:
+
+`ASDF_PATHNAME`::
+Path to CL source
+
+`ASDF_REGISTRY`::
+Path to CL registry containing asd files
+
+`CCL`::
+Path to the Clozure Common Lisp compiler
+
+`CLISP`::
+Path to the GNU Common Lisp compiler
+
+`CL_LIBDIR_REL`::
+CL library directory relative to `LOCALBASE` or `PREFIX`
+
+`FASL_DIR_REL`::
+Relative path to compiled fasl files; depends on `FASL_TARGET`
+
+`FASL_PATHNAME`::
+Path to CL fasl
+
+`LISP_EXTRA_ARG`::
+Extra arguments used when building fasl
+
+`SBCL`::
+Path to the Steel Bank Common Lisp compiler
+
 [[uses-cmake]]
 == `cmake`
 
