--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -2207,8 +2207,8 @@ Possible arguments: (none), `2`, `3`
 Add a dependency on SQLite.
 The default version used is 3, but version 2 is also possible using the `:2` modifier.
 
-[[uses-srbk]]
-== `srbk`
+[[uses-sbrk]]
+== `sbrk`
 
 Possible arguments: (none)
 
