--- a/documentation/content/en/books/handbook/wayland/_index.adoc
+++ b/documentation/content/en/books/handbook/wayland/_index.adoc
@@ -370,13 +370,13 @@ To start Hikari, use the following command:
 [[wayland-sway]]
 == The Sway Compositor
 
-[NOTE]
-====
-Make sure you have read this section 'How to Identify and Configure Drivers for Your Graphics Hardware'. otherwise it would give error "0 GPU detected".
-====
-
 The Sway compositor is a tiling compositor that attempts to replace the i3 windows manager.
 It should work with the user's current i3 configuration; however, new features may require some additional setup.
+
+Before starting the Sway installation, ensure that a graphics card (GPU) is installed and configured correctly.
+Refer to the section crossref:x11[x-graphic-card-drivers,drivers for your graphics hardware] for guidance.
+This step is essential for the Sway compositor to function properly.
+
 In the forthcoming examples, a fresh installation without migrating any i3 configuration will be assumed.
 To install Sway and valuable components, issue the following command as the root user:
 
