handbook/wayland/sway: Add a note before the installation instructions
Reported by:	https://github.com/Ghodawalaaman
Pull Request:	https://github.com/freebsd/freebsd-doc/pull/443

--- a/documentation/content/en/books/handbook/wayland/_index.adoc
+++ b/documentation/content/en/books/handbook/wayland/_index.adoc
@@ -372,6 +372,11 @@ To start Hikari, use the following command:
 
 The Sway compositor is a tiling compositor that attempts to replace the i3 windows manager.
 It should work with the user's current i3 configuration; however, new features may require some additional setup.
+
+Before starting the Sway installation, ensure that a graphics card (GPU) is installed and configured correctly.
+Refer to the section crossref:x11[x-graphic-card-drivers,drivers for your graphics hardware] for guidance.
+This step is essential for the Sway compositor to function properly.
+
 In the forthcoming examples, a fresh installation without migrating any i3 configuration will be assumed.
 To install Sway and valuable components, issue the following command as the root user:
 
