Status: Add the contact for the FreeBSD installer report

--- a/website/content/en/status/report-2024-10-2024-12/installer.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/installer.adoc
@@ -7,6 +7,8 @@ link:https://github.com/freebsd/freebsd-src/pull/1424[bsdinstall: Add pkg instal
 link:https://github.com/freebsd/freebsd-src/pull/1427[bsdinstall: Add repair scripts to installer menu (#1427)] URL: link:https://github.com/freebsd/freebsd-src/pull/1427[]
 link:https://wiki.freebsd.org/LaptopDesktopWorkingGroup[Laptop and Desktop Working Group] URL: link:https://wiki.freebsd.org/LaptopDesktopWorkingGroup[]
 
+Contact: Pierre Pronchery <pierre@freebsdfoundation.org>
+
 As part of 2024's GSoC Project on the FreeBSD installer, I had the pleasure to mentor Chun Cheng Yeh (aka "Leaf") with his implementation of additional capabilities.
 The aim was to add support for repairing or updating an existing installation of FreeBSD, as well as allowing packages to be installed in the Live environment.
 This work has been consolidated into three distinct pull-requests, available on GitHub.
