Handbook: Preface - Upgrade Fourth Edition section
The preface section has been updated to incorporate the latest changes
made by the Handbook Working Group in preparation for the 4th edition
of the Handbook.

Thanks to:

* arrowd@
* bapt@
* bcr@
* dbaio@
* emaste@
* fernape@
* jrm@
* karels@
* manu@
* mckusick@
* philip@
* The FreeBSD Foundation

Special thanks to karels@, whose contributions and influence
will be remembered.

Sponsored by:	Siracusa

--- a/documentation/content/en/books/handbook/preface/_index.adoc
+++ b/documentation/content/en/books/handbook/preface/_index.adoc
@@ -63,9 +63,21 @@ These are the major updates since the fourth edition of the Handbook.
 
 * The Handbook has been converted from link:https://docbook.org/[Docbook] to link:https://gohugo.io/[Hugo] and link:https://asciidoctor.org/[AsciiDoctor]
 * The link:https://docs.FreeBSD.org[FreeBSD Documentation Portal] has been created.
-* crossref:wayland[wayland,Wayland] has been added with information about installing and configuring Wayland under FreeBSD.
+* The crossref:introduction[introduction, Introduction] chapter has been updated to improve the FreeBSD history and fix minor typos.
+* The crossref:bsdinstall[bsdinstall, Install] chapter has been updated with an upgraded synopsis, the latest changes to the installer, refreshed images, added alt text to images, and the removal of references to specific versions.
+* The crossref:basics[basics, Basics] chapter has updated tables, command outputs, and directory structure per man:hier.
+* The crossref:ports[ports, Ports] chapter has been updated and now simplifies package searches, updates software examples (Nginx replaces Apache), improves the man:pkg[8] bootstrap process, and adds new instructions for configuring and managing packages, including blocking and unblocking.
+* The crossref:x11[x11, X11] chapter has been updated to reflect the current state of graphics in FreeBSD, remove outdated references to old Intel drivers, configurations, and compiz, and relocate desktop environment instructions (such as KDE Plasma and GNOME) to the Desktop Environments chapter, as these environments now also support Wayland in addition to X11.
+* The crossref:wayland[wayland,Wayland] chapter has been added with information about installing and configuring Wayland under FreeBSD.
+* The crossref:network[network, Network] chapter has been created to cover basic wired and wireless network configuration, including hostname, DNS, and troubleshooting. Sections on wired networks, wireless, and IPv6 have been moved and updated with improved command outputs, use of sysrc, and better AsciiDoc syntax.
+* The crossref:desktop[desktop, Desktop] chapter has been updated with upgraded installation instructions for KDE Plasma, GNOME, XFCE, MATE, Cinnamon, and LXQT, expanded browser options, a new development tools section, and updates to office productivity, document viewers, and finance sections.
+* The crossref:multimedia[multimedia, Multimedia] chapter has been reworked with updates to the sound section, new tables for sound mixers, audio players, and video players, guidance on automatic headphone switching, a new conferencing and meetings section, and a revised image scanners section.
+* The crossref:linuxemu[linuxemu, Linuxemu] chapter has been improved with updated instructions for setting up a Debian/Ubuntu base system using debootstrap.
+* The crossref:config[config, Config] chapter has been renamed for accuracy, with updates to service management, cron and periodic, syslog, power management, and swap sections. A new entry on config files was added, and the outdated tuning section was removed.
+* The crossref:security[security, Security] chapter has been updated with enhancements to VPN over IPSec, securing accounts, password hashes, sudo/doas, and OpenSSH/OpenSSL. New sections have been added covering IDS, secure levels, file flags, Capsicum, NFSv4 ACLs, and resource limits.
+* The crossref:jails[jails, Jails] chapter has been updated to include details on jail types (Thick, Thin, VNET, and Linux Jails), host system configuration, networking options, the jail configuration file, setup procedures, upgrade methods, resource limits, and different jail managers and container solutions.
+* The crossref:mail[mail, Mail] chapter has been updated to include information on DMA, upgrades to Sendmail, instructions for changing DMA and Sendmail to use different MTAs, and the removal of Dialup and Fetchmail sections, along with a reorganization of the chapter.
 * The crossref:bibliography[bibliography,Bibliography] has been extensively updated.
-
 
 [[preface-changes-from3]]
 == Third Edition
