--- a/website/content/en/releases/11.4R/relnotes.adoc
+++ b/website/content/en/releases/11.4R/relnotes.adoc
@@ -51,7 +51,7 @@ Typical release note items document recent security advisories issued after 11.3
 [[upgrade]]
 == Upgrading from Previous Releases of FreeBSD
 
-[amd64,i386] Binary upgrades between RELEASE versions (and snapshots of the various security branches) are supported using the  man:freebsd-update[8&manpath=freebsd-release-ports[freebsd-update(8)] utility. The binary upgrade procedure will update unmodified userland utilities, as well as unmodified GENERIC kernels distributed as a part of an official FreeBSD release. The  man:freebsd-update[8&manpath=freebsd-release-ports[freebsd-update(8)] utility requires that the host being upgraded have Internet connectivity.
+[amd64,i386] Binary upgrades between RELEASE versions (and snapshots of the various security branches) are supported using the  man:freebsd-update[8] utility. The binary upgrade procedure will update unmodified userland utilities, as well as unmodified GENERIC kernels distributed as a part of an official FreeBSD release. The  man:freebsd-update[8] utility requires that the host being upgraded have Internet connectivity.
 
 Source-based upgrades (those based on recompiling the FreeBSD base system from source code) from previous versions are supported, according to the instructions in `/usr/src/UPDATING`.
 
