Add link to project description for Improve OpenJDK on FreeBSD

--- a/website/content/en/status/report-2024-10-2024-12/openjdk.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/openjdk.adoc
@@ -1,5 +1,8 @@
 === Improve OpenJDK on FreeBSD
 
+Links: +
+link:https://freebsdfoundation.org/project/improving-openjdk-on-freebsd/[Project description] URL: link:https://freebsdfoundation.org/project/improving-openjdk-on-freebsd/[]
+
 Contact: Harald Eilertsen <haraldei-fbsd@anduin.net>
 
 The aim of this project is to improve support for Java in FreeBSD, by working with the upstream OpenJDK community, as well as the FreeBSD community in getting the changes and additions needed for fully supporting FreeBSD accepted upstream.
