Website - Usergroups: Add Turkey usergroup
PR:		279644
Sponsored by:	Siracusa

--- a/website/content/en/usergroups/_index.adoc
+++ b/website/content/en/usergroups/_index.adoc
@@ -179,6 +179,11 @@ link:https://twitter.com/bsdbelfast[The BSD in Belfast Group]::
 Meet the BSD Belfast Group the third Friday of the month.
 We are a group of academic and industrial BSD users and admirers.
 
+link:https://freebsd.web.tr/[FreeBSD Türkiye]::
+We are a community of FreeBSD enthusiasts and professionals dedicated to supporting and advancing FreeBSD systems.
+Our group actively engages in writing documentation, contributing code, and conducting research to enhance the FreeBSD ecosystem.
+Whether you're an experienced developer or just starting with FreeBSD, join us in fostering collaboration and innovation within the Turkey FreeBSD community.
+
 [[north-america]]
 === North America
 
