Fix typos in website/content/en/status/report-2024-10-2024-12/openjdk.adoc
Thanks to pauamma for proofreading.

Co-authored-by: Pau Amma <pauamma@gundo.com>

--- a/website/content/en/status/report-2024-10-2024-12/openjdk.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/openjdk.adoc
@@ -7,7 +7,7 @@ Contact: Harald Eilertsen <haraldei-fbsd@anduin.net>
 
 The aim of this project is to improve support for Java in FreeBSD, by working with the upstream OpenJDK community, as well as the FreeBSD community in getting the changes and additions needed for fully supporting FreeBSD accepted upstream.
 
-As this is a new project, there not much to report yet, but here's what has been acheived so far:
+As this is a new project, there is not much to report yet, but here's what has been achieved so far:
 
 * The Java Test Regression harness (jtreg) now [builds and runs][1] on FreeBSD, and the process of link:https://github.com/openjdk/jtreg/pull/237[upstreaming the changes] has started.
 
