Fix punctuation for website/content/en/status/report-2024-10-2024-12/openjdk.adoc
Thanks to pauamma for proofreading.

Co-authored-by: Pau Amma <pauamma@gundo.com>

--- a/website/content/en/status/report-2024-10-2024-12/openjdk.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/openjdk.adoc
@@ -11,7 +11,7 @@ As this is a new project, there is not much to report yet, but here's what has b
 
 * The Java Test Regression harness (jtreg) now [builds and runs][1] on FreeBSD, and the process of link:https://github.com/openjdk/jtreg/pull/237[upstreaming the changes] has started.
 
-* OpenJDK 23 builds and runs on FreeBSD, and work on adding it to the ports collection has started, this is still considered experimental. link:https://reviews.freebsd.org/D48194[]
+* OpenJDK 23 builds and runs on FreeBSD, and work on adding it to the ports collection has started; this is still considered experimental. link:https://reviews.freebsd.org/D48194[]
 
 * Work on porting the next OpenJDK (version 24) has started. link:https://github.com/snake66/jdk/tree/jdk24-freebsd[]
 
