--- a/website/content/en/status/report-2024-10-2024-12/openjdk.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/openjdk.adoc
@@ -15,4 +15,4 @@ As this is a new project, there is not much to report yet, but here's what has b
 
 * Work on porting the next OpenJDK (version 24) has started. link:https://github.com/snake66/jdk/tree/jdk24-freebsd[]
 
-Sponsor: link:https://freebsdfoundation.org/[The FreeBSD Foundation]
+Sponsor: The FreeBSD Foundation
