Fox missing link in website/content/en/status/report-2024-10-2024-12/openjdk.adoc
Thanks to pauamma for proofreading.

--- a/website/content/en/status/report-2024-10-2024-12/openjdk.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/openjdk.adoc
@@ -9,7 +9,7 @@ The aim of this project is to improve support for Java in FreeBSD, by working wi
 
 As this is a new project, there is not much to report yet, but here's what has been achieved so far:
 
-* The Java Test Regression harness (jtreg) now [builds and runs][1] on FreeBSD, and the process of link:https://github.com/openjdk/jtreg/pull/237[upstreaming the changes] has started.
+* The Java Test Regression harness (jtreg) now link:https://github.com/snake66/jtreg/tree/freebsd-port[builds and runs] on FreeBSD, and the process of link:https://github.com/openjdk/jtreg/pull/237[upstreaming the changes] has started.
 
 * OpenJDK 23 builds and runs on FreeBSD, and work on adding it to the ports collection has started; this is still considered experimental. link:https://reviews.freebsd.org/D48194[]
 
