Status/2024Q4/foundation-security.adoc: typo fix

--- a/website/content/en/status/report-2024-10-2024-12/foundation-security.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/foundation-security.adoc
@@ -15,7 +15,7 @@ My tasks at the FreeBSD Foundation continue to revolve around Security Engineeri
 First, we keep working on the outcome of the source code audit on bhyve and Capsicum, documenting and researching how to prevent and mitigate similar issues from occurring again in the future.
 This includes the processes relevant for contributions to the FreeBSD Project, as well as the preparation of a joint presentation with Alpha-Omega at the BSD Devroom during the coming FOSDEM conference in 2025.
 
-At the same time, I am liaising with the Open Regulatory Compliance Working Group (ORC WG), where an FAQ is being elaborared jointly by a number of stakeholders on the European Union's newly introduced Cyber Resilience Act (CRA).
+At the same time, I am liaising with the Open Regulatory Compliance Working Group (ORC WG), where an FAQ is being elaborated jointly by a number of stakeholders on the European Union's newly introduced Cyber Resilience Act (CRA).
 This is all related to our ongoing collaboration with OpenSSF, notably the self-assessment initiative; note that the FreeBSD Foundation can provide assistance in this regard for projects deploying FreeBSD.
 
 Finally, possibilities around the integration of OSV tooling into the FreeBSD ecosystem are under investigation as well.
