Re-add my (updated) PGP key

--- a/documentation/content/en/articles/pgpkeys/_index.adoc
+++ b/documentation/content/en/articles/pgpkeys/_index.adoc
@@ -237,6 +237,9 @@ include::{include-path}makc.key[]
 === `{jmb}`
 include::{include-path}jmb.key[]
 
+=== `{dab}`
+include::{include-path}dab.key[]
+
 === `{antoine}`
 include::{include-path}antoine.key[]
 
