handbook: Note that portupgrade is deprecated
PR:		284054
Reviewed by:	bapt
Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D48462

--- a/documentation/content/en/books/handbook/ports/_index.adoc
+++ b/documentation/content/en/books/handbook/ports/_index.adoc
@@ -1023,6 +1023,12 @@ More information about package:ports-mgmt/portmaster[] may be found in its `pkg-
 [[portupgrade]]
 ==== Upgrading Ports Using Portupgrade
 
+[WARNING]
+====
+Portupgrade is deprecated and will be removed in the near future.
+====
+
+
 package:ports-mgmt/portupgrade[] is another utility that can be used to upgrade ports.
 It installs a suite of applications which can be used to manage ports.
 However, it is dependent upon Ruby. To install the port:
